5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1590_1016.log
== TEST (2019-03-25 15:23:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input("lado 1: "))
b = float(input("lado 2: "))
c = float(input("lado 3: "))

s = (a+b+c)/2
A = sqrt(s(s-a)*(s-b)*(s-c))
print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    A = sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:24:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input("lado 1: "))
b = float(input("lado 2: "))
c = float(input("lado 3: "))

s = (a+b+c)/2
A = sqrt((s(s-a)*(s-b)*(s-c))
print(round(A,5))
-- ERROR:
File "XXXX", line 11
    print(round(A,5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:24:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input("lado 1: "))
b = float(input("lado 2: "))
c = float(input("lado 3: "))

s = (a+b+c)/2
x = sqrt((s(s-a)*(s-b)*(s-c))
print(round(x,5))
-- ERROR:
File "XXXX", line 11
    print(round(x,5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:24:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input("lado 1: "))
b = float(input("lado 2: "))
c = float(input("lado 3: "))

s = (a+b+c)/2
x = sqrt(s(s-a)*(s-b)*(s-c)
print(round(x,5))
-- ERROR:
File "XXXX", line 11
    print(round(x,5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:24:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input("lado 1: "))
b = float(input("lado 2: "))
c = float(input("lado 3: "))

s = (a+b+c)/2
x = sqrt(s(s-a)*(s-b)*(s-c)
print(round(x,5))
-- ERROR:
File "XXXX", line 11
    print(round(x,5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:25:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input("lado 1: "))
b = float(input("lado 2: "))
c = float(input("lado 3: "))

s = (a+b+c)/2
x = sqrt(s(s-a)*(s-b)*(s-c))
print(round(x,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x = sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:25:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input("lado 1: "))
b = float(input("lado 2: "))
c = float(input("lado 3: "))

s = (a+b+c)/2
x = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(x,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:26:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input("lado 1: "))
b = float(input("lado 2: "))
c = float(input("lado 3: "))

s = (a+b+c)/2
x = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(x,5))
-- EXECUTION TIME:
0.15484
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
